--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
