--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-css": "^6.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1",
