--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": "^10.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sharp": "^0.32.6",
     "swiper": "^11.0.5"
   },
